# ros2_video_tutorial

./: .gitignore  LICENSE  README.md  fix_emails.sh
ros_tutorials/turtlesim/src/: turtle_frame.cpp
src/: manual.txt
src/action_fibonacci/: package.xml  setup.cfg  setup.py
src/action_fibonacci/action_fibonacci/: fibonacci_action_client.py  fibonacci_action_serv_feedback_example.py  fibonacci_action_server.py
src/action_tutorials_interfaces/: CMakeLists.txt  package.xml
src/arm_package_chatgpt/: README.md  package.xml  setup.cfg  setup.py
src/arm_package_chatgpt/launch/: arm_display.launch.py
src/arm_package_chatgpt/rviz/: arm_simple.rviz
src/arm_package_chatgpt/urdf/: arm.urdf  config.json
src/arm_package_chatgpt/urdf/assets/: 1st_link_free.part  1st_link_free.stl  1st_link_power.part  1st_link_power.stl  2nd_link.part  2nd_link.stl  base.part  base.stl  motor_housing_link1.part  motor_housing_link1.stl  sg_ziji_15.part  sg_ziji_15.stl  turnable_base.part  turnable_base.stl
src/launch/: turtlesim_mimic_launch.py
src/launch_tut1/: package.xml  setup.cfg  setup.py
src/launch_tutorial/: package.xml  setup.py
src/launch_tutorial/launch/: example_main.launch.py  (+1 more)
src/learning_tf2_py/: package.xml  setup.py
src/my_package/: package.xml
src/new_format_msg/: package.xml  setup.cfg  setup.py
src/py_launch_ex/: package.xml  setup.cfg  setup.py
src/py_pubsub/: package.xml  setup.py
src/py_srvcli/: package.xml  setup.py
src/python_parameters/: package.xml  setup.py
src/tutorial_interfaces/: CMakeLists.txt  package.xml
(+7 files in other folders)
